include/rp.h

typedef int bool;
#define RP_OK     0
#define RP_EOED   1
#define RP_EOMD   2
#define RP_ECMD   3
#define RP_EMMD   4
#define RP_EUMD   5
#define RP_EOOR   6
#define RP_ELID   7
#define RP_EMRO   8
#define RP_EWIP   9
#define RP_EPN    10
#define RP_UIA    11
#define RP_FCA    12
#define RP_RCA    13
#define RP_BTS    14
#define RP_EIPV   15
#define RP_EUF    16
#define RP_ENN    17
#define RP_EFOB   18
#define RP_EFCB   19
#define RP_EABA   20
#define RP_EFRB   21
#define RP_EFWB   22
typedef enum {
    RP_LED0 = 0,       
    RP_LED1,       
    RP_LED2,       
    RP_LED3,       
    RP_LED4,       
    RP_LED5,       
    RP_LED6,       
    RP_LED7,       
    RP_DIO0_P,     
    RP_DIO1_P,     
    RP_DIO2_P,     
    RP_DIO3_P,     
    RP_DIO4_P,     
    RP_DIO5_P,     
    RP_DIO6_P,     
    RP_DIO7_P,     
    RP_DIO0_N,     
    RP_DIO1_N,     
    RP_DIO2_N,     
    RP_DIO3_N,     
    RP_DIO4_N,     
    RP_DIO5_N,     
    RP_DIO6_N,     
    RP_DIO7_N      
} rp_dpin_t;
typedef enum {
    RP_LOW = 0, 
    RP_HIGH 
} rp_pinState_t;
typedef enum {
    RP_IN = 0, 
    RP_OUT 
} rp_pinDirection_t;
typedef enum {
    RP_AOUT0 = 0,      
    RP_AOUT1,      
    RP_AOUT2,      
    RP_AOUT3,      
    RP_AIN0,       
    RP_AIN1,       
    RP_AIN2,       
    RP_AIN3        
} rp_apin_t;
typedef enum {
    RP_TEMP_FPGA = 0,  
    RP_VCC_PINT,   
    RP_VCC_PAUX,   
    RP_VCC_BRAM,   
    RP_VCC_INT,    
    RP_VCC_AUX,    
    RP_VCC_DDR     
} rp_health_t;
typedef enum {
    RP_WAVEFORM_SINE = 0,       
    RP_WAVEFORM_SQUARE,     
    RP_WAVEFORM_TRIANGLE,   
    RP_WAVEFORM_RAMP_UP,    
    RP_WAVEFORM_RAMP_DOWN,  
    RP_WAVEFORM_DC,         
    RP_WAVEFORM_PWM,        
    RP_WAVEFORM_ARBITRARY   
} rp_waveform_t;
typedef enum {
    RP_GEN_MODE_CONTINUOUS = 0, 
    RP_GEN_MODE_BURST,      
    RP_GEN_MODE_STREAM      
} rp_gen_mode_t;
typedef enum {
    RP_GEN_TRIG_SRC_INTERNAL = 1,   
    RP_GEN_TRIG_SRC_EXT_PE = 2,     
    RP_GEN_TRIG_SRC_EXT_NE = 3,     
    RP_GEN_TRIG_GATED_BURST     
} rp_trig_src_t;
typedef enum {
    RP_CH_1 = 0, 
    RP_CH_2  
} rp_channel_t;
typedef enum {
    RP_SMP_125M = 0,     
    RP_SMP_15_625M,  
    RP_SMP_1_953M,   
    RP_SMP_122_070K, 
    RP_SMP_15_258K,  
    RP_SMP_1_907K    
} rp_acq_sampling_rate_t;
typedef enum {
    RP_DEC_1 = 0,     
    RP_DEC_8,     
    RP_DEC_64,    
    RP_DEC_1024,  
    RP_DEC_8192,  
    RP_DEC_65536  
} rp_acq_decimation_t;
typedef enum {
    RP_TRIG_SRC_DISABLED = 0, 
    RP_TRIG_SRC_NOW,      
    RP_TRIG_SRC_CHA_PE,   
    RP_TRIG_SRC_CHA_NE,   
    RP_TRIG_SRC_CHB_PE,   
    RP_TRIG_SRC_CHB_NE,   
    RP_TRIG_SRC_EXT_PE,   
    RP_TRIG_SRC_EXT_NE,   
    RP_TRIG_SRC_AWG_PE,   
    RP_TRIG_SRC_AWG_NE    
} rp_acq_trig_src_t;
typedef enum {
    RP_TRIG_STATE_TRIGGERED = 0, 
    RP_TRIG_STATE_WAITING,   
} rp_acq_trig_state_t;
int rp_Init();
int rp_Release();
int rp_Reset();
const char* rp_GetVersion();
const char* rp_GetError(int errorCode);
int rp_DpinReset();
int rp_DpinSetState(rp_dpin_t pin, rp_pinState_t state);
int rp_DpinGetState(rp_dpin_t pin, rp_pinState_t* state);
int rp_DpinSetDirection(rp_dpin_t pin, rp_pinDirection_t direction);
int rp_DpinGetDirection(rp_dpin_t pin, rp_pinDirection_t* direction);
int rp_ApinReset();
int rp_ApinGetValue(rp_apin_t pin, float* value);
int rp_ApinGetValueRaw(rp_apin_t pin, uint32_t* value);
int rp_ApinSetValue(rp_apin_t pin, float value);
int rp_ApinSetValueRaw(rp_apin_t pin, uint32_t value);
int rp_ApinGetRange(rp_apin_t pin, float* min_val,  float* max_val);
int rp_AcqSetDecimation(rp_acq_decimation_t decimation);
int rp_AcqGetDecimation(rp_acq_decimation_t* decimation);
int rp_AcqGetDecimationFactor(uint32_t* decimation);
int rp_AcqSetSamplingRate(rp_acq_sampling_rate_t sampling_rate);
int rp_AcqGetSamplingRate(rp_acq_sampling_rate_t* sampling_rate);
int rp_AcqGetSamplingRateHz(float* sampling_rate);
int rp_AcqSetAveraging(bool enabled);
int rp_AcqGetAveraging(bool *enabled);
int rp_AcqSetTriggerSrc(rp_acq_trig_src_t source);
int rp_AcqGetTriggerSrc(rp_acq_trig_src_t* source);
int rp_AcqGetTriggerState(rp_acq_trig_state_t* state);
int rp_AcqSetTriggerDelay(int32_t decimated_data_num);
int rp_AcqGetTriggerDelay(int32_t* decimated_data_num);
int rp_AcqSetTriggerDelayNs(int64_t time_ns);
int rp_AcqGetTriggerDelayNs(int64_t* time_ns);
int rp_AcqSetTriggerLevel(float voltage);
int rp_AcqGetTriggerLevel(float* voltage);